# mmdiff3

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  mmdiff_3.cpp  mmdiff_3.hpp
Experiment NB/: Validation Experiment.ipynb  simulation.py
Experiment NB/.ipynb_checkpoints/: Validation Experiment-checkpoint.ipynb
Experiment NB/Exp_conf/: config1.json  config10.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json
Experiment_NB/: Validation Experiment.ipynb  simulation.py
Experiment_NB/.ipynb_checkpoints/: Validation Experiment-checkpoint.ipynb
Experiment_NB/Exp_conf/: config2.json  config3.json  config4.json  config5.json  config7.json  config8.json
Experiment_NB/Exp_conf_test/: config1.json
R/: Test.R  compDists.R  compDists2.R  compPvals.R  getPeakReads.R  runMMD.R
Simulation Script/: environment.yml  simulation.py
Simulation files/: DataNotebook.json
Test/: Test.R
src/: CMakeLists.txt  Makefile.common  R_init.cpp  R_init.hpp  kernel_function.hpp  mmd.cpp  mmd.hpp  mmdiff3.cpp  mmdiff3.hpp  mmdiff_3.cpp  mmdiff_3.hpp  rbf_joint_discrete_kernel.cpp  rbf_joint_discrete_kernel.hpp  rbf_joint_kernel.cpp  rbf_joint_kernel.hpp
